Add view first step

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MoprEmberApp</title>
+    <title>Koszy utrzymania miaeszkańca DPS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,10 +16,10 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    {{content-for "body-footer"}}
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/mopr-ember-app.js"></script>
 
-    {{content-for "body-footer"}}
+    
   </body>
 </html>
